# endian

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: test_action.yml  versioning.yml
cmake/: install.cmake
docs/: doxygen.conf
include/ecpp/: endian.hpp
tests/: CMakeLists.txt  byteswap.cpp  ntoh_hton.cpp
tests/src/: 01_ntoh_hton.cpp
